[project]
name = "Codac"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
packages = []

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"